--- a/webcam.html
+++ b/webcam.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title></title>
-		<!-- script src="base64binary.js"></script> -->
+		<script src="base64binary.js"></script>
 		<!-- <script src="facebook.js"></script> -->
 		<script src="webcam.js"></script>
 	</head>
