--- a/webcam.html
+++ b/webcam.html
@@ -3,7 +3,7 @@
 	<head>
 		<title></title>
 		<script src="base64binary.js"></script>
-		<!-- <script src="facebook.js"></script> -->
+		<script src="facebook.js"></script>
 		<script src="webcam.js"></script>
 	</head>
 	<body style="margin: 0 auto; padding: 0;">
