--- a/webcam.html
+++ b/webcam.html
@@ -26,6 +26,7 @@
 		<script>
 
 			function startSide1() {
+				// webcam.reset();
 				webcam.start("camera", {
 					draggables: ["apple-icon", "atom-icon", "book-icon"],
 					takePhoto: "take-photo",
@@ -36,6 +37,7 @@
 			}
 
 			function startSide2() {
+				// webcam.reset();
 				webcam.start("camera", {
 					draggables: ["compass-icon", "earth-globe-icon", "flasks-icon"],
 					takePhoto: "take-photo",
