--- a/webcam.html
+++ b/webcam.html
@@ -20,33 +20,16 @@
 			<button id="redo" style="display: none"; onclick="webcam.redo()">Redo!</button>
 			<button id="share" style="display: block"; onclick="webcam.share()">Share!</button>
 			<button id="logout" style="display: block"; onclick="webcam.logout()">Logout</button>
-			<button id="side1" style="display: block"; onclick="startSide1()">Side 1</button>
-			<button id="side2" style="display: block"; onclick="startSide2()">Side 2</button>
+			<input type="file" id="imageLoader" name="imageLoader"/>
 		</div>
 		<script>
-
-			function startSide1() {
-				// webcam.reset();
-				webcam.start("camera", {
-					draggables: ["apple-icon", "atom-icon", "book-icon"],
-					takePhoto: "take-photo",
-					redo: "redo",
-					share: "share",
-					logout: "logout"
-				});	
-			}
-
-			function startSide2() {
-				// webcam.reset();
-				webcam.start("camera", {
-					draggables: ["compass-icon", "earth-globe-icon", "flasks-icon"],
-					takePhoto: "take-photo",
-					redo: "redo",
-					share: "share",
-					logout: "logout"
-				});	
-			}
-
+			webcam.start("camera", {
+				draggables: ["apple-icon", "atom-icon", "book-icon", "compass-icon", "earth-globe-icon", "flasks-icon"],
+				takePhoto: "take-photo",
+				redo: "redo",
+				share: "share",
+				logout: "logout"
+			});
 		</script>
 	</body>
 </html>
