--- a/webcam.html
+++ b/webcam.html
@@ -21,6 +21,8 @@
 			<button id="share" style="display: block";>Share!</button>
 			<button id="logout" style="display: block";>Logout</button>
 			<input type="file" id="upload"/>
+			<!-- <fb:login-button scope="public_profile,email" onlogin="webcam.checkLoginState();"></fb:login-button> -->
+			<!-- <div class="fb-login-button" data-max-rows="1" data-size="medium" data-show-faces="true" data-auto-logout-link="true"></div> -->
 		</div>
 		<script>
 			webcam.start("camera", {
